# networking

./: .clang-format  .gitignore
basic-client/: CMakeLists.txt
basic-client/includes/: AddressInfo.hpp  HTTPClient.hpp  Socket.hpp
basic-client/src/: AddressInfo.cpp  HTTPClient.cpp  Socket.cpp  main.cpp
basic-server/: CMakeLists.txt
basic-server/includes/: Server.hpp  User.hpp  UserController.hpp  UserRepository.hpp  UserService.hpp
basic-server/includes/controller/: IController.hpp  UserController.hpp
basic-server/includes/core/: ResponseBuilder.hpp  Router.hpp  Server.hpp
basic-server/includes/model/: User.hpp
basic-server/includes/repository/: IRepository.hpp  UserRepository.hpp
basic-server/includes/service/: IService.hpp  UserService.hpp
basic-server/src/: Server.cpp  UserController.cpp  UserRepository.cpp  UserService.cpp  main.cpp
basic-server/src/controller/: UserController.cpp
basic-server/src/core/: ResponseBuilder.cpp  Router.cpp  Server.cpp
basic-server/src/repository/: UserRepository.cpp
basic-server/src/service/: UserService.cpp
notes/network-concepts/introduction/: introduction.md
